#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_hdf2psana
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-07-05
2013-12-12 Andy Salnikov
- regenerate whole thing from psddldata V00-04-53
- new type Evr::SrcConfigV1

Tag: V00-07-04
2013-12-02 Andy Salnikov
- regenerate whole thing from psddldata V00-04-50
- new epixsampler package

Tag: V00-07-03
2013-11-18 Andy Salnikov
- add sections attribute to cspad config types
- this needs latest tag of psddl (V00-12-07 or better)

Tag: V00-07-02
2013-11-12 Andy Salnikov
- small improvement to ddl_* script

Tag: V00-07-01
2013-11-12 Andy Salnikov
- upgrade to pdsdata V07-02-07
- ipimb config types finally got array of capacitor values
- new rayonix package

Tag: V00-07-00
2013-11-05 Andy Salnikov
- preparation for new DDL parser: tags renamed:
  - no-proxy to embedded (in h5 schema)
  - need psddl V00-12-00 for this change
  
Tag: V00-06-00
2013-10-31 Andy Salnikov
- replace chunk size argument for make_datasets with chunk slzie policy 
  objects
- chunk policy also determines chunk cache size, method in HdfParameters
  is not used any more, class is removed 
- class DefaultChunkPolicy provides default implementation of the 
  chunk policy which repeats what we have in old translator.

Tag: V00-05-03
2013-10-24 Andy Salnikov
- more mistakes in ControlData.ConfigV2 generated by old translator,
  need a new schema version
- generated code now adds _schemaVersion attribute to a group

Tag: V00-05-02
2013-10-11 Andy Salnikov
- actual schema for ControlData.ConfigV2 and ConfigV3 classes produced 
  by "old" translator was missing one attribute (npvLabels)
- create special v0 schema for these two classes which lacks that